--- a/index.html
+++ b/index.html
@@ -14,23 +14,12 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;family=Fira+Code&amp;display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-TNPe8tkCbZ2M1zDh/QEqplLWYwgdEN0OZK0s8AjtKoa6HgMHtYjgJv1bLvK+cvM/" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <link rel="stylesheet" href="style.min.css">
 <link rel="stylesheet" href="dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
-<script src="https://cdn.tailwindcss.com"></script>
+<script src="https://cdn.tailwindcss.com?plugins=daisyui"></script>
 <script>
-tailwind.config = {
-  darkMode: 'class',
-  theme: {
-    extend: {
-      colors: {
-        accent: 'var(--mt-accent)',
-        surface: 'var(--mt-surface)',
-        background: 'var(--mt-bg)',
-        text: 'var(--mt-text)'
-      }
+tailwind.config={darkMode:"class",plugins:[daisyui],daisyui:{themes:["dark","cupcake"]},theme:{extend:{colors:{accent:"var(--mt-accent)",surface:"var(--mt-surface)",background:"var(--mt-bg)",text:"var(--mt-text)"}}}};
     }
   }
 }
@@ -196,12 +185,11 @@ tailwind.config = {
     <h2 class="text-xl font-semibold mb-4">Productivity</h2>
     <div class="grid gap-6 auto-cols-fr md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
       <a href="tools/countdown-timer/index.html" x-data="{name:'countdown timer'}" x-show="name.includes($root.search.toLowerCase())" class="tool-card group relative bg-surface rounded-lg p-4 ring-1 ring-white/5 hover:-translate-y-1 hover:ring-accent/50 transition animate__animated animate__zoomIn" data-aos="fade-up">
-
-  <!-- Productivity Section -->
-      <a href="tools/countdown-timer/index.html" x-data="{name:'countdown timer'}" x-show="name.includes(search.toLowerCase())" class="tool-card group relative bg-surface rounded-lg p-4 ring-1 ring-white/5 hover:-translate-y-1 hover:ring-accent/50 transition animate__animated animate__zoomIn" data-aos="fade-up">
-        <span class="text-3xl block mb-2">⏳</span>
-        <span class="font-semibold">Countdown Timer</span>
-        <p class="text-sm opacity-70 mt-1">Track time remaining for any task.</p>
+<script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/ui@3.x.x/dist/cdn.min.js"></script>
+<script type="module">import {gsap} from "https://cdn.jsdelivr.net/npm/gsap@3.12.2/dist/gsap.min.js";import {ScrollTrigger} from "https://cdn.jsdelivr.net/npm/gsap@3.12.2/dist/ScrollTrigger.min.js";gsap.registerPlugin(ScrollTrigger);window.gsap=gsap;window.ScrollTrigger=ScrollTrigger;</script>
+<script type="module" src="db.js"></script>
+<script src="https://plausible.io/js/plausible.js" data-domain="example.com" defer></script>
+<script type="module" src="https://cdn.jsdelivr.net/npm/instant.page@5.1.1/instantpage.mjs"></script>
         <i aria-hidden="true" class="fa-solid fa-arrow-right absolute bottom-4 right-4 opacity-0 group-hover:opacity-100 transition-transform group-hover:translate-x-1"></i>
       </a>
       <a href="tools/pomodoro-timer/index.html" x-data="{name:'pomodoro timer'}" x-show="name.includes($root.search.toLowerCase())" class="tool-card group relative bg-surface rounded-lg p-4 ring-1 ring-white/5 hover:-translate-y-1 hover:ring-accent/50 transition animate__animated animate__zoomIn" data-aos="fade-up">
