--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
 <link rel="stylesheet" href="dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
 <script src="https://cdn.tailwindcss.com?plugins=daisyui"></script>
 <script>
-tailwind.config={darkMode:"class",plugins:[daisyui],daisyui:{themes:["dark","cupcake"]},theme:{extend:{colors:{accent:"var(--mt-accent)",surface:"var(--mt-surface)",background:"var(--mt-bg)",text:"var(--mt-text)"}}}};
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-TNPe8tkCbZ2M1zDh/QEqplLWYwgdEN0OZK0s8AjtKoa6HgMHtYjgJv1bLvK+cvM/" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-<script src="https://cdn.tailwindcss.com"></script>
 tailwind.config = {
   darkMode: 'class',
+  plugins: [daisyui],
+  daisyui: { themes: ['dark', 'cupcake'] },
   theme: {
     extend: {
       colors: {
@@ -33,16 +31,29 @@ tailwind.config = {
         background: 'var(--mt-bg)',
         text: 'var(--mt-text)'
       }
-    }
-  }
-}
-</script>
-<link rel="stylesheet" href="tools.css">
-</head>
-<body class="bg-background text-text font-inter" x-init="$store.theme.init()" :class="$store.theme.mode">
-<header x-data="{open:false}" class="fixed top-0 w-full backdrop-blur bg-background/80 z-50 border-b border-white/10">
-  <div class="max-w-6xl mx-auto flex items-center justify-between p-4">
-    <a href="#" class="font-semibold text-lg">MiniTools Universe</a>
+};
+    <h1 class="text-3xl font-semibold mb-4" data-aos="fade-down">All your tools in one place</h1>
+    <p class="mb-6 opacity-80" data-aos="fade-down" data-aos-delay="100">Quick, lightweight utilities that work offline.</p>
+    <input x-model="search" placeholder="Search tools..." aria-label="Search tools" class="mx-auto block w-11/12 sm:w-2/3 md:w-1/2 lg:w-1/3 px-4 py-2 rounded-full bg-surface text-text focus-visible:ring-2 focus-visible:ring-accent transition motion-safe:transform-gpu" data-aos="zoom-in" />
+      <a href="tools/basic-calculator/index.html" x-data="{name:'basic calculator'}" x-show="name.includes($root.search.toLowerCase())" class="tool-card group relative bg-surface rounded-lg p-4 ring-1 ring-white/5 hover:-translate-y-1 hover:ring-accent/50 transition" data-aos="fade-up">
+      <a href="tools/scientific-calculator/index.html" x-data="{name:'scientific calculator'}" x-show="name.includes($root.search.toLowerCase())" class="tool-card group relative bg-surface rounded-lg p-4 ring-1 ring-white/5 hover:-translate-y-1 hover:ring-accent/50 transition" data-aos="fade-up">
+      <a href="tools/car-loan-calculator/index.html" x-data="{name:'car loan calculator'}" x-show="name.includes($root.search.toLowerCase())" class="tool-card group relative bg-surface rounded-lg p-4 ring-1 ring-white/5 hover:-translate-y-1 hover:ring-accent/50 transition" data-aos="fade-up">
+      <a href="tools/fuel-cost-calculator/index.html" x-data="{name:'fuel cost calculator'}" x-show="name.includes($root.search.toLowerCase())" class="tool-card group relative bg-surface rounded-lg p-4 ring-1 ring-white/5 hover:-translate-y-1 hover:ring-accent/50 transition" data-aos="fade-up">
+      <a href="tools/unit-converter/index.html" x-data="{name:'unit converter'}" x-show="name.includes($root.search.toLowerCase())" class="tool-card group relative bg-surface rounded-lg p-4 ring-1 ring-white/5 hover:-translate-y-1 hover:ring-accent/50 transition" data-aos="fade-up">
+      <a href="tools/csv-to-json/index.html" x-data="{name:'csv to json'}" x-show="name.includes($root.search.toLowerCase())" class="tool-card group relative bg-surface rounded-lg p-4 ring-1 ring-white/5 hover:-translate-y-1 hover:ring-accent/50 transition" data-aos="fade-up">
+      <a href="tools/color-converter/index.html" x-data="{name:'color converter'}" x-show="name.includes($root.search.toLowerCase())" class="tool-card group relative bg-surface rounded-lg p-4 ring-1 ring-white/5 hover:-translate-y-1 hover:ring-accent/50 transition" data-aos="fade-up">
+      <a href="tools/base64-encoder/index.html" x-data="{name:'base64 encoder'}" x-show="name.includes($root.search.toLowerCase())" class="tool-card group relative bg-surface rounded-lg p-4 ring-1 ring-white/5 hover:-translate-y-1 hover:ring-accent/50 transition" data-aos="fade-up">
+      <a href="tools/countdown-timer/index.html" x-data="{name:'countdown timer'}" x-show="name.includes($root.search.toLowerCase())" class="tool-card group relative bg-surface rounded-lg p-4 ring-1 ring-white/5 hover:-translate-y-1 hover:ring-accent/50 transition" data-aos="fade-up">
+      <a href="tools/pomodoro-timer/index.html" x-data="{name:'pomodoro timer'}" x-show="name.includes($root.search.toLowerCase())" class="tool-card group relative bg-surface rounded-lg p-4 ring-1 ring-white/5 hover:-translate-y-1 hover:ring-accent/50 transition" data-aos="fade-up">
+      <a href="tools/stopwatch/index.html" x-data="{name:'stopwatch'}" x-show="name.includes($root.search.toLowerCase())" class="tool-card group relative bg-surface rounded-lg p-4 ring-1 ring-white/5 hover:-translate-y-1 hover:ring-accent/50 transition" data-aos="fade-up">
+      <a href="tools/json-formatter/index.html" x-data="{name:'json formatter'}" x-show="name.includes($root.search.toLowerCase())" class="tool-card group relative bg-surface rounded-lg p-4 ring-1 ring-white/5 hover:-translate-y-1 hover:ring-accent/50 transition" data-aos="fade-up">
+      <a href="tools/uuid-generator/index.html" x-data="{name:'uuid generator'}" x-show="name.includes($root.search.toLowerCase())" class="tool-card group relative bg-surface rounded-lg p-4 ring-1 ring-white/5 hover:-translate-y-1 hover:ring-accent/50 transition" data-aos="fade-up">
+      <a href="tools/markdown-editor/index.html" x-data="{name:'markdown editor'}" x-show="name.includes($root.search.toLowerCase())" class="tool-card group relative bg-surface rounded-lg p-4 ring-1 ring-white/5 hover:-translate-y-1 hover:ring-accent/50 transition" data-aos="fade-up">
+      <a href="tools/color-picker/index.html" x-data="{name:'color picker'}" x-show="name.includes($root.search.toLowerCase())" class="tool-card group relative bg-surface rounded-lg p-4 ring-1 ring-white/5 hover:-translate-y-1 hover:ring-accent/50 transition" data-aos="fade-up">
+      <a href="tools/dice-roller/index.html" x-data="{name:'dice roller'}" x-show="name.includes($root.search.toLowerCase())" class="tool-card group relative bg-surface rounded-lg p-4 ring-1 ring-white/5 hover:-translate-y-1 hover:ring-accent/50 transition" data-aos="fade-up">
+      <a href="tools/word-counter/index.html" x-data="{name:'word counter'}" x-show="name.includes($root.search.toLowerCase())" class="tool-card group relative bg-surface rounded-lg p-4 ring-1 ring-white/5 hover:-translate-y-1 hover:ring-accent/50 transition" data-aos="fade-up">
+      <a href="tools/base64-encoder/index.html" x-data="{name:'base64 encoder'}" x-show="name.includes($root.search.toLowerCase())" class="tool-card group relative bg-surface rounded-lg p-4 ring-1 ring-white/5 hover:-translate-y-1 hover:ring-accent/50 transition" data-aos="fade-up">
+      <a href="tools/markdown-editor/index.html" x-data="{name:'markdown editor'}" x-show="name.includes($root.search.toLowerCase())" class="tool-card group relative bg-surface rounded-lg p-4 ring-1 ring-white/5 hover:-translate-y-1 hover:ring-accent/50 transition" data-aos="fade-up">
     <button @click="open=!open" class="md:hidden text-accent text-xl mr-2 focus:outline-none focus-visible:ring" aria-label="Menu">
       <i class="fa-solid fa-bars" x-show="!open"></i>
       <i class="fa-solid fa-xmark" x-show="open"></i>
