--- a/index.html
+++ b/index.html
@@ -10,37 +10,35 @@
 <meta property="og:description" content="Explore calculators, converters and utilities in a single hub.">
 <meta property="og:url" content="https://example.com/index.html">
 <link rel="canonical" href="https://example.com/index.html">
+<link rel="manifest" href="manifest.webmanifest">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;family=Fira+Code&amp;display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Fira+Code&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-TNPe8tkCbZ2M1zDh/QEqplLWYwgdEN0OZK0s8AjtKoa6HgMHtYjgJv1bLvK+cvM/" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
 <link rel="stylesheet" href="style.min.css">
 <link rel="stylesheet" href="dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
+<link rel="stylesheet" href="tools.css">
 <script src="https://cdn.tailwindcss.com?plugins=daisyui"></script>
 <script>
-tailwind.config = {
-  darkMode: 'class',
-  plugins: [daisyui],
-  daisyui: { themes: ['dark', 'cupcake'] },
-tailwind.config={darkMode:"class",plugins:[daisyui],daisyui:{themes:["dark","cupcake"]},theme:{extend:{colors:{accent:"var(--mt-accent)",surface:"var(--mt-surface)",background:"var(--mt-bg)",text:"var(--mt-text)"}}}};
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-TNPe8tkCbZ2M1zDh/QEqplLWYwgdEN0OZK0s8AjtKoa6HgMHtYjgJv1bLvK+cvM/" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-<script src="https://cdn.tailwindcss.com"></script>
-  theme: {
-    extend: {
-      colors: {
-        accent: 'var(--mt-accent)',
-        surface: 'var(--mt-surface)',
-        background: 'var(--mt-bg)',
-        text: 'var(--mt-text)'
+  tailwind.config = {
+    darkMode: 'class',
+    plugins: [daisyui],
+    daisyui: { themes: ['dark', 'cupcake'] },
+    theme: {
+      extend: {
+        colors: {
+          accent: 'var(--mt-accent)',
+          surface: 'var(--mt-surface)',
+          background: 'var(--mt-bg)',
+          text: 'var(--mt-text)'
+        }
       }
     }
-  }
-};
-}
+  };
 </script>
-<link rel="stylesheet" href="tools.css">
 </head>
 <body class="bg-background text-text font-inter" x-init="$store.theme.init()" :class="$store.theme.mode">
 <header x-data="{open:false}" class="fixed top-0 w-full backdrop-blur bg-background/80 z-50 border-b border-white/10">
@@ -70,39 +68,6 @@ tailwind.config={darkMode:"class",plugins:[daisyui],daisyui:{themes:["dark","cup
     <h1 class="text-3xl font-semibold mb-4" data-aos="fade-down">All your tools in one place</h1>
     <p class="mb-6 opacity-80" data-aos="fade-down" data-aos-delay="100">Quick, lightweight utilities that work offline.</p>
     <input x-model="search" placeholder="Search tools..." aria-label="Search tools" class="mx-auto block w-11/12 sm:w-2/3 md:w-1/2 lg:w-1/3 px-4 py-2 rounded-full bg-surface text-text focus-visible:ring-2 focus-visible:ring-accent transition motion-safe:transform-gpu" data-aos="zoom-in" />
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>MiniTools Universe - Handy offline tools</title>
-  <meta name="description" content="Explore calculators, converters and utilities in a single dark-themed hub. Works offline.">
-
-  <!-- Fonts & Icons -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Fira+Code&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <!-- Framework CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-TNPe8tkCbZ2M1zDh/QEqplLWYwgdEN0OZK0s8AjtKoa6HgMHtYjgJv1bLvK+cvM/" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
-  <!-- Site Styles -->
-  <link rel="stylesheet" href="style.min.css">
-  <link rel="stylesheet" href="dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
-  <link rel="stylesheet" href="tools.css">
-  <!-- Tailwind (JIT) -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      darkMode: 'class',
-      theme: {
-        extend: {
-          colors: {
-            accent: 'var(--mt-accent)',
-            surface: 'var(--mt-surface)',
-            background: 'var(--mt-bg)',
-            text: 'var(--mt-text)'
-          }
-        }
-  </script>
 <!-- Header -->
     <div class="flex items-center">
       <!-- Mobile Menu Button -->
@@ -353,18 +318,4 @@ tailwind.config={darkMode:"class",plugins:[daisyui],daisyui:{themes:["dark","cup
 <script src="mini.js" defer></script>
 </body>
 </html>
-
-<!-- Footer -->
-<footer class="text-center text-sm opacity-80 py-8 mt-8">
-  © 2025 MiniTools Universe
-<!-- Scripts -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous" defer></script>
-<script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/gsap.min.js" defer></script>
-<script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/ScrollTrigger.min.js" defer></script>
-<script>
-  document.addEventListener('DOMContentLoaded', () => AOS.init({once: true}));
-</script>
-  // Initialize AOS (Animate on Scroll) after the DOM is loaded
-  document.addEventListener('DOMContentLoaded', () => AOS.init({ once: true }));
-
 
