Add meta description for base64 encoder

--- a/tools/base64-encoder/index.html
+++ b/tools/base64-encoder/index.html
@@ -4,11 +4,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Base64 Encoder/Decoder - Convert Text Quickly</title>
-<meta name="description" content="Base64 Encoder/Decoder transforms text to base64 and back instantly in your browser." />
+<meta name="description" content="Base64 Encoder/Decoder converts text to and from base64 instantly. Offline, secure and free." />
 <meta name="robots" content="index,follow">
 <meta property="og:url" content="https://example.com/tools/base64-encoder/">
 <meta property="og:title" content="Base64 Encoder/Decoder"/>
-<meta property="og:description" content="Encode or decode base64 strings"/>
+<meta property="og:description" content="Convert text to and from base64 instantly. Works offline with no data sent to servers."/>
 <link rel="canonical" href="https://example.com/tools/base64-encoder/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
