Tick completed tasks in AGENTS

--- a/tools/basic-calculator/index.html
+++ b/tools/basic-calculator/index.html
@@ -9,6 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/basic-calculator/">
 <meta property="og:title" content="Basic Calculator"/>
 <meta property="og:description" content="Quick online arithmetic"/>
+<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/1F9EE.png"/>
 <link rel="canonical" href="https://example.com/tools/basic-calculator/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
