--- a/tools/bmr-calculator/index.html
+++ b/tools/bmr-calculator/index.html
@@ -9,6 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/bmr-calculator/">
 <meta property="og:title" content="BMR Calculator"/>
 <meta property="og:description" content="Estimate daily calorie needs"/>
+<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/1F525.png"/>
 <link rel="canonical" href="https://example.com/tools/bmr-calculator/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
