--- a/tools/color-converter/index.html
+++ b/tools/color-converter/index.html
@@ -9,6 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/color-converter/">
 <meta property="og:title" content="Color Converter"/>
 <meta property="og:description" content="Convert hex colors to RGB or HSL"/>
+<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/1F3A8.png"/>
 <link rel="canonical" href="https://example.com/tools/color-converter/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
