--- a/tools/compound-interest-calculator/index.html
+++ b/tools/compound-interest-calculator/index.html
@@ -9,6 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/compound-interest-calculator/">
 <meta property="og:title" content="Compound Interest Calculator"/>
 <meta property="og:description" content="See savings grow with compound interest"/>
+<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/1F4B9.png"/>
 <link rel="canonical" href="https://example.com/tools/compound-interest-calculator/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
