--- a/tools/epoch-time-converter/index.html
+++ b/tools/epoch-time-converter/index.html
@@ -9,6 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/epoch-time-converter/">
 <meta property="og:title" content="Epoch Time Converter"/>
 <meta property="og:description" content="Convert dates to and from Unix time"/>
+<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/23F1-FE0F.png"/>
 <link rel="canonical" href="https://example.com/tools/epoch-time-converter/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
