--- a/tools/fraction-calculator/index.html
+++ b/tools/fraction-calculator/index.html
@@ -9,6 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/fraction-calculator/">
 <meta property="og:title" content="Fraction Calculator"/>
 <meta property="og:description" content="Solve fraction problems easily"/>
+<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/BC.png"/>
 <link rel="canonical" href="https://example.com/tools/fraction-calculator/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
