--- a/tools/pomodoro-timer/index.html
+++ b/tools/pomodoro-timer/index.html
@@ -9,6 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/pomodoro-timer/">
 <meta property="og:title" content="Pomodoro Timer"/>
 <meta property="og:description" content="Work in focused intervals"/>
+<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/1F345.png"/>
 <link rel="canonical" href="https://example.com/tools/pomodoro-timer/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
