--- a/tools/scientific-calculator/index.html
+++ b/tools/scientific-calculator/index.html
@@ -9,6 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/scientific-calculator/">
 <meta property="og:title" content="Scientific Calculator"/>
 <meta property="og:description" content="Advanced calculator for complex math"/>
+<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/1F4D0.png"/>
 <link rel="canonical" href="https://example.com/tools/scientific-calculator/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
