--- a/tools/time-zone-converter/index.html
+++ b/tools/time-zone-converter/index.html
@@ -9,6 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/time-zone-converter/">
 <meta property="og:title" content="Time Zone Converter"/>
 <meta property="og:description" content="Compare times across time zones"/>
+<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/1F551.png"/>
 <link rel="canonical" href="https://example.com/tools/time-zone-converter/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
