--- a/tools/tip-calculator/index.html
+++ b/tools/tip-calculator/index.html
@@ -9,6 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/tip-calculator/">
 <meta property="og:title" content="Tip Calculator"/>
 <meta property="og:description" content="Calculate tips and split bills quickly"/>
+<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/1F4B5.png"/>
 <link rel="canonical" href="https://example.com/tools/tip-calculator/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
