--- a/tools/body-fat-calculator/index.html
+++ b/tools/body-fat-calculator/index.html
@@ -9,6 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/body-fat-calculator/">
 <meta property="og:title" content="Body Fat Calculator"/>
 <meta property="og:description" content="Estimate body fat percentage"/>
+<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/1F4AA.png"/>
 <link rel="canonical" href="https://example.com/tools/body-fat-calculator/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
