--- a/tools/circle-area-calculator/index.html
+++ b/tools/circle-area-calculator/index.html
@@ -9,6 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/circle-area-calculator/">
 <meta property="og:title" content="Circle Area Calculator"/>
 <meta property="og:description" content="Find disk size from radius or diameter"/>
+<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/2B55.png"/>
 <link rel="canonical" href="https://example.com/tools/circle-area-calculator/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
