--- a/tools/color-picker/index.html
+++ b/tools/color-picker/index.html
@@ -9,10 +9,10 @@
 <meta property="og:url" content="https://example.com/tools/color-picker/">
 <meta property="og:title" content="Color Picker"/>
 <meta property="og:description" content="Pick colors and copy codes instantly"/>
+<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/1F3A8.png"/>
 <link rel="canonical" href="https://example.com/tools/color-picker/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-TNPe8tkCbZ2M1zDh/QEqplLWYwgdEN0OZK0s8AjtKoa6HgMHtYjgJv1bLvK+cvM/" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
@@ -30,7 +30,7 @@
 <main data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p><strong>Color Picker</strong> lets designers quickly choose any hue and instantly see its HEX, RGB and HSL codes. Use the slider or enter a value to refine your shade, then copy the color codes to your clipboard with one click. The entire tool works offline after the first visit so you can rely on it anywhere. Simple and fast, it&rsquo;s perfect for web projects, graphic design or presentations. Try the Color Picker now!</p>
 <div>
-<input type="color" id="picker" value="#3f51b5">
+<input type="color" id="picker" value="#3f51b5" aria-label="Pick a color">
 <p>HEX: <span id="hex">#3f51b5</span> <button id="copyHex">Copy</button></p>
 <p>RGB: <span id="rgb">63,81,181</span> <button id="copyRgb">Copy</button></p>
 <p>HSL: <span id="hsl">231,48%,48%</span> <button id="copyHsl">Copy</button></p>
