--- a/tools/countdown-timer/index.html
+++ b/tools/countdown-timer/index.html
@@ -9,6 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/countdown-timer/">
 <meta property="og:title" content="Countdown Timer"/>
 <meta property="og:description" content="Set a timer and count down easily"/>
+<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/23F3.png"/>
 <link rel="canonical" href="https://example.com/tools/countdown-timer/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
