--- a/tools/currency-converter/index.html
+++ b/tools/currency-converter/index.html
@@ -9,6 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/currency-converter/">
 <meta property="og:title" content="Currency Converter"/>
 <meta property="og:description" content="Convert between USD, EUR and GBP"/>
+<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/1F4B1.png"/>
 <link rel="canonical" href="https://example.com/tools/currency-converter/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
