--- a/tools/fuel-cost-calculator/index.html
+++ b/tools/fuel-cost-calculator/index.html
@@ -9,6 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/fuel-cost-calculator/">
 <meta property="og:title" content="Fuel Cost Calculator"/>
 <meta property="og:description" content="Estimate fuel expenses for road trips"/>
+<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/26FD.png"/>
 <link rel="canonical" href="https://example.com/tools/fuel-cost-calculator/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
