--- a/tools/markdown-editor/index.html
+++ b/tools/markdown-editor/index.html
@@ -9,6 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/markdown-editor/">
 <meta property="og:title" content="Markdown Editor"/>
 <meta property="og:description" content="Edit Markdown and see the result instantly"/>
+<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/1F4DD.png"/>
 <link rel="canonical" href="https://example.com/tools/markdown-editor/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
