--- a/tools/random-number-generator/index.html
+++ b/tools/random-number-generator/index.html
@@ -9,6 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/random-number-generator/">
 <meta property="og:title" content="Random Number Generator"/>
 <meta property="og:description" content="Pick random numbers instantly"/>
+<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/1F3B2.png"/>
 <link rel="canonical" href="https://example.com/tools/random-number-generator/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
