--- a/tools/temperature-converter/index.html
+++ b/tools/temperature-converter/index.html
@@ -9,6 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/temperature-converter/">
 <meta property="og:title" content="Temperature Converter"/>
 <meta property="og:description" content="Convert between Celsius and Fahrenheit"/>
+<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/1F321-FE0F.png"/>
 <link rel="canonical" href="https://example.com/tools/temperature-converter/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
