--- a/tools/unit-converter/index.html
+++ b/tools/unit-converter/index.html
@@ -9,6 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/unit-converter/">
 <meta property="og:title" content="Unit Converter"/>
 <meta property="og:description" content="Quickly convert metric and imperial units"/>
+<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/1F504.png"/>
 <link rel="canonical" href="https://example.com/tools/unit-converter/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
