--- a/tools/uuid-generator/index.html
+++ b/tools/uuid-generator/index.html
@@ -9,6 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/uuid-generator/">
 <meta property="og:title" content="UUID Generator"/>
 <meta property="og:description" content="Generate version 4 UUIDs instantly"/>
+<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/1F194.png"/>
 <link rel="canonical" href="https://example.com/tools/uuid-generator/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
