--- a/tools/word-counter/index.html
+++ b/tools/word-counter/index.html
@@ -9,6 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/word-counter/">
 <meta property="og:title" content="Word Counter"/>
 <meta property="og:description" content="Free word and character counter"/>
+<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/1F4DD.png"/>
 <link rel="canonical" href="https://example.com/tools/word-counter/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
