--- a/tools/fraction-calculator/index.html
+++ b/tools/fraction-calculator/index.html
@@ -30,8 +30,14 @@
 <main data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Fraction Calculator makes working with fractions straightforward. This <strong>online fraction calculator</strong> handles common tasks like adding, subtracting, multiplying, and dividing with ease. Simply enter two fractions, choose the operation, and see the result displayed in simplest form. Whether you need a quick <em>fraction solver</em> for homework problems or to adjust a recipe, this tool calculates everything in your browser. Since it runs entirely client-side, it continues to work offline once loaded. The clean design focuses on usability so you can concentrate on the math. Get accurate answers every time and master tricky fraction exercises. Try the Fraction Calculator now!</p>
 <form id="fracForm" aria-label="Fraction calculator form">
-<label>Fraction 1 <input type="number" id="num1" placeholder="Numerator" style="width:4em"> / <input type="number" id="den1" placeholder="Denominator" style="width:4em"></label><br>
-<label>Fraction 2 <input type="number" id="num2" placeholder="Numerator" style="width:4em"> / <input type="number" id="den2" placeholder="Denominator" style="width:4em"></label><br>
+<label for="num1">Fraction 1 Numerator</label>
+<input type="number" id="num1" placeholder="Numerator" style="width:4em"> /
+<label for="den1">Denominator</label>
+<input type="number" id="den1" placeholder="Denominator" style="width:4em"><br>
+<label for="num2">Fraction 2 Numerator</label>
+<input type="number" id="num2" placeholder="Numerator" style="width:4em"> /
+<label for="den2">Denominator</label>
+<input type="number" id="den2" placeholder="Denominator" style="width:4em"><br>
 <label>Operation
 <select id="op">
 <option value="add">+</option>
