--- a/tools/triangle-area-calculator/index.html
+++ b/tools/triangle-area-calculator/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
+<link rel="stylesheet" href="../../tools.css">
 <script defer src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script defer src="../../app.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous"></script>
@@ -26,8 +27,9 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I find triangle area?","acceptedAnswer":{"@type":"Answer","text":"Enter base and height then press calculate to see the area."}},{"@type":"Question","name":"Can I use different units?","acceptedAnswer":{"@type":"Answer","text":"Yes, the result is in the same units you enter for base and height."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"After your first visit, the tool runs entirely from your browser."}},{"@type":"Question","name":"Is it free?","acceptedAnswer":{"@type":"Answer","text":"Yes, the Triangle Area Calculator is completely free to use."}},{"@type":"Question","name":"Is my input saved?","acceptedAnswer":{"@type":"Answer","text":"No values are stored or sent anywhere; everything stays on your device."}}]}</script>
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🔺</span> Triangle Area Calculator</h1></div></header>
-<main data-aos="fade-in" class="container animate__animated animate__fadeIn">
+<main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Triangle Area Calculator gives you a quick way to measure any three-sided shape. This <strong>triangle area calculator online</strong> takes the base and height, then instantly provides the area. Builders and students alike use it to check homework, verify measurements, or plan projects. The interface is minimal so you can concentrate on the numbers. Because it runs in your browser, the calculator loads fast and still works when you have no internet connection. It’s perfect for classrooms, job sites, or quick geometry checks on the go. The tool is designed to be intuitive on phones and desktops, with large form fields and clear buttons. Give it a try whenever you need to work out surface area without a bulky calculator or textbook. Try the Triangle Area Calculator now!</p>
 <label>Base: <input type="number" id="base" aria-label="Base"></label>
 <label>Height: <input type="number" id="height" aria-label="Height"></label>
