--- a/tools/age-calculator/index.html
+++ b/tools/age-calculator/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
+<link rel="stylesheet" href="../../tools.css">
 <script defer src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script defer src="../../app.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous"></script>
@@ -26,8 +27,9 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I calculate my age?","acceptedAnswer":{"@type":"Answer","text":"Enter your birthdate and the tool displays your age automatically."}},{"@type":"Question","name":"Is the Age Calculator free?","acceptedAnswer":{"@type":"Answer","text":"Yes, it is completely free to use."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"After the first load, you can use the calculator without internet."}},{"@type":"Question","name":"Is my birthdate stored?","acceptedAnswer":{"@type":"Answer","text":"No data is saved; everything runs in your browser."}},{"@type":"Question","name":"Can I calculate someone else's age?","acceptedAnswer":{"@type":"Answer","text":"Yes, just enter any valid birthdate to get the age."}}]}</script>
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🎂</span> Age Calculator</h1></div></header>
-<main data-aos="fade-in" class="container animate__animated animate__fadeIn">
+<main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Age Calculator provides a simple way to determine exactly how old you are today. This <strong>online age tool</strong> helps you figure out the number of years since your birth without doing the math yourself. Simply select your birthdate in the field below and your age appears instantly. The calculator uses standard date functions for accurate results. Once the page has loaded, it will also work offline thanks to cached assets. Whether you're curious about your next birthday or filling out paperwork, this tool is ready anytime. Try the Age Calculator now!</p>
 <div>
 <label>Date of Birth <input type="date" id="birth" aria-label="Birth date"></label>
