--- a/tools/base64-encoder/index.html
+++ b/tools/base64-encoder/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
+<link rel="stylesheet" href="../../tools.css">
 <script defer src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script defer src="../../app.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous"></script>
@@ -26,8 +27,9 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I encode text?","acceptedAnswer":{"@type":"Answer","text":"Type your text then click encode to get the base64 string."}},{"@type":"Question","name":"Can I decode a base64 string?","acceptedAnswer":{"@type":"Answer","text":"Yes, paste the base64 and click decode to see the original text."}},{"@type":"Question","name":"Is it secure?","acceptedAnswer":{"@type":"Answer","text":"Encoding is done locally so your data never leaves the page."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"After first visit, the tool runs without internet."}},{"@type":"Question","name":"Is it free?","acceptedAnswer":{"@type":"Answer","text":"Yes, the Base64 Encoder/Decoder is free to use."}}]}</script>
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🔤</span> Base64 Encoder/Decoder</h1></div></header>
-<main data-aos="fade-in" class="container animate__animated animate__fadeIn">
+<main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>The <strong>Base64 Encoder/Decoder</strong> lets you quickly convert between plain text and base64 strings. It&rsquo;s handy for developers who need to encode data for URLs, storage, or testing. Simply enter your text and hit encode, or paste a base64 string and decode it instantly. Everything runs client-side so your content stays private and the tool works offline after it&rsquo;s loaded once. Save time and get the conversions you need. Try the Base64 Encoder/Decoder now!</p>
 <div>
 <textarea id="b64Input" rows="4" cols="40" placeholder="Enter text or base64"></textarea><br>
