--- a/tools/basic-calculator/index.html
+++ b/tools/basic-calculator/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
+<link rel="stylesheet" href="../../tools.css">
 <script defer src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script defer src="../../app.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous"></script>
@@ -28,8 +29,9 @@
 </script>
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🧮</span> Basic Calculator</h1></div></header>
-<main data-aos="fade-in" class="container animate__animated animate__fadeIn">
+<main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Basic Calculator provides a straightforward way to handle everyday arithmetic. This <strong>online calculator</strong> works smoothly on mobile and desktop, letting you add, subtract, multiply and divide with ease. The design focuses on speed and clarity so you can perform quick calculations without fuss. Whether you're figuring out a tip or checking homework, this tool keeps your workflow simple. You can perform consecutive operations and see your results immediately. With a lightweight codebase, the calculator loads fast and stays responsive. Because it's built for the web, you can bookmark it and use it whenever you need. <em>Advanced functions</em> aren't included to keep the experience clean and focused on what most people use daily. After the first visit, all assets are cached, meaning you can run it even when offline. Try the Basic Calculator now!</p>
 <div id="calculator">
 <input type="text" id="display" aria-label="Display" readonly>
