--- a/tools/bmi-calculator/index.html
+++ b/tools/bmi-calculator/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
+<link rel="stylesheet" href="../../tools.css">
 <script defer src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script defer src="../../app.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous"></script>
@@ -26,8 +27,9 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I use the BMI Calculator?","acceptedAnswer":{"@type":"Answer","text":"Enter your height and weight then press calculate to see your BMI."}},{"@type":"Question","name":"Is this calculator free?","acceptedAnswer":{"@type":"Answer","text":"Yes, the BMI Calculator is free and works offline."}},{"@type":"Question","name":"Are my numbers saved?","acceptedAnswer":{"@type":"Answer","text":"No data is stored; everything is processed in your browser."}},{"@type":"Question","name":"What units are supported?","acceptedAnswer":{"@type":"Answer","text":"Enter weight in kilograms and height in centimeters."}},{"@type":"Question","name":"What is a healthy BMI range?","acceptedAnswer":{"@type":"Answer","text":"A BMI between 18.5 and 24.9 is generally considered healthy."}}]}</script>
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">⚖️</span> BMI Calculator</h1></div></header>
-<main data-aos="fade-in" class="container animate__animated animate__fadeIn">
+<main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>BMI Calculator makes it easy to know your body mass index. This <strong>online BMI calculator</strong> uses the standard formula so you can determine whether you're underweight, normal, overweight, or obese. Just input your weight in kilograms and height in centimeters. The result appears instantly, providing guidance on your health status. Designed to work fast on any device, this lightweight tool loads quickly and keeps your information private. After your first visit, all files remain cached so you can check your BMI even without an internet connection. Keep track of changes as you adjust your diet or workout routine. Try the BMI Calculator now!</p>
 <div>
 <label>Weight (kg) <input type="number" id="weight" aria-label="Weight"></label>
