--- a/tools/body-fat-calculator/index.html
+++ b/tools/body-fat-calculator/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
+<link rel="stylesheet" href="../../tools.css">
 <script defer src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script defer src="../../app.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous"></script>
@@ -26,8 +27,9 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I measure body fat?","acceptedAnswer":{"@type":"Answer","text":"Enter your gender, waist, neck and height measurements. The calculator uses the US Navy formula to estimate body fat."}},{"@type":"Question","name":"Is the Body Fat Calculator free?","acceptedAnswer":{"@type":"Answer","text":"Yes, this tool is free for personal use."}},{"@type":"Question","name":"Can I use metric units?","acceptedAnswer":{"@type":"Answer","text":"Yes, you can switch between imperial and metric units."}},{"@type":"Question","name":"Does it store my data?","acceptedAnswer":{"@type":"Answer","text":"No information is saved. Everything runs locally in your browser."}},{"@type":"Question","name":"Is it mobile friendly?","acceptedAnswer":{"@type":"Answer","text":"The layout adapts to any screen so you can check body fat on phones and tablets."}}]}</script>
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">💪</span> Body Fat Calculator</h1></div></header>
-<main data-aos="fade-in" class="container animate__animated animate__fadeIn">
+<main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Body Fat Calculator provides a quick way to estimate your body fat percentage without special equipment. This <strong>online body fat calculator</strong> uses the U.S. Navy method, which relies on simple body measurements like waist, neck, and height. By entering these numbers, you get an approximate percentage that can help you monitor your fitness progress. The interface works smoothly on phones, tablets and desktops, so you can check results anywhere. After the first visit, the calculator works offline thanks to cached assets. No personal data is saved or transmitted. Keep in mind that body fat formulas provide estimates and may vary based on individual factors, so consult a health professional for precise guidance. Try the Body Fat Calculator now!</p>
 <div>
 <label>Gender
