--- a/tools/car-loan-calculator/index.html
+++ b/tools/car-loan-calculator/index.html
@@ -15,6 +15,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
+<link rel="stylesheet" href="../../tools.css">
 <script defer src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script defer src="../../app.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous"></script>
@@ -22,8 +23,9 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I calculate my loan payment?","acceptedAnswer":{"@type":"Answer","text":"Enter amount, interest rate and years, then press calculate."}},{"@type":"Question","name":"Can I use this for mortgages?","acceptedAnswer":{"@type":"Answer","text":"Yes, you can estimate mortgage payments the same way."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Once loaded it works without internet."}},{"@type":"Question","name":"Is my data saved?","acceptedAnswer":{"@type":"Answer","text":"No inputs are stored or sent anywhere."}},{"@type":"Question","name":"Is the tool free?","acceptedAnswer":{"@type":"Answer","text":"Yes, the Car Loan Calculator is completely free."}}]}</script>
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🏦</span> Car Loan Calculator</h1></div></header>
-<main data-aos="fade-in" class="container animate__animated animate__fadeIn">
+<main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Car Loan Calculator helps you estimate affordable monthly payments when financing a vehicle. This <strong>online car loan tool</strong> factors in your vehicle price, down payment, interest rate and loan term. Enter the numbers and get instant results so you can shop with confidence. Because it runs entirely in your browser, you can use it offline anytime. Try the Car Loan Calculator now!</p>
 <label>Vehicle Price: <input type="number" id="loanAmount" aria-label="Vehicle price"></label>
 <label>Down Payment: <input type="number" id="loanDown" aria-label="Down payment"></label>
