--- a/tools/circle-area-calculator/index.html
+++ b/tools/circle-area-calculator/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
+<link rel="stylesheet" href="../../tools.css">
 <script defer src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script defer src="../../app.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous"></script>
@@ -26,8 +27,9 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I calculate circle area?","acceptedAnswer":{"@type":"Answer","text":"Enter a radius or diameter, and the calculator shows the area using pi."}},{"@type":"Question","name":"Can I enter the diameter instead?","acceptedAnswer":{"@type":"Answer","text":"Yes, the tool accepts diameter and converts it to radius automatically."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"After the first visit, the calculator loads from cache without the internet."}},{"@type":"Question","name":"Is this calculator free?","acceptedAnswer":{"@type":"Answer","text":"Absolutely. You can use the Circle Area Calculator without charge or sign-up."}},{"@type":"Question","name":"Are my numbers stored?","acceptedAnswer":{"@type":"Answer","text":"No values are saved, ensuring your input remains private."}}]}</script>
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">⭕</span> Circle Area Calculator</h1></div></header>
-<main data-aos="fade-in" class="container animate__animated animate__fadeIn">
+<main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Circle Area Calculator makes it simple to determine how much space a round surface covers. This <strong>online circle area calculator</strong> lets you type in the radius or diameter and instantly see the computed area. Builders, students and hobbyists rely on this tool whenever they need a quick disk measurement. The straightforward interface keeps distractions away so you can focus on the numbers. It works smoothly on mobile devices and desktops, so you can check calculations anywhere. Because everything runs in your browser, it loads rapidly and functions without a connection after the first visit. Whether you're planning a circular patio, estimating paint coverage or solving geometry homework, this lightweight utility saves you time. Try the Circle Area Calculator now!</p>
 <div>
 <label>Radius <input id="radius" type="number" min="0" step="any" aria-label="Radius"></label>
