--- a/tools/color-converter/index.html
+++ b/tools/color-converter/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
+<link rel="stylesheet" href="../../tools.css">
 <script defer src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script defer src="../../app.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous"></script>
@@ -26,8 +27,9 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I convert HEX to RGB?","acceptedAnswer":{"@type":"Answer","text":"Enter a HEX value and click convert to see the RGB values."}},{"@type":"Question","name":"Can it convert to HSL?","acceptedAnswer":{"@type":"Answer","text":"Yes, the HSL equivalent displays alongside the RGB output."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Once loaded the converter runs entirely in your browser."}},{"@type":"Question","name":"Is my color saved?","acceptedAnswer":{"@type":"Answer","text":"No, all conversions happen locally and no data is stored."}},{"@type":"Question","name":"Is it free to use?","acceptedAnswer":{"@type":"Answer","text":"Yes, the Color Converter is completely free."}}]}</script>
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🎨</span> Color Converter</h1></div></header>
-<main data-aos="fade-in" class="container animate__animated animate__fadeIn">
+<main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>The <strong>Color Converter</strong> helps you quickly switch between HEX, RGB, and HSL color formats. Designers and developers often need different formats for various tools, and this <em>online color code converter</em> makes the process simple. Type a HEX value like <code>#ff5733</code> and instantly see the corresponding RGB and HSL values. Everything runs on the client side, so after the first visit you can keep using the tool offline. Adjusting your palette has never been easier. Try the Color Converter now!</p>
 <div>
 <label>HEX <input id="hex" value="#ff0000"></label>
