--- a/tools/color-picker/index.html
+++ b/tools/color-picker/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
+<link rel="stylesheet" href="../../tools.css">
 <script defer src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script defer src="../../app.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous"></script>
@@ -26,8 +27,9 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I copy a color code?","acceptedAnswer":{"@type":"Answer","text":"Select a color and click the copy button next to the value you need."}},{"@type":"Question","name":"What formats are shown?","acceptedAnswer":{"@type":"Answer","text":"The picker displays HEX, RGB and HSL values for each color."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Yes, once loaded the color picker functions without an internet connection."}},{"@type":"Question","name":"Is my selection stored?","acceptedAnswer":{"@type":"Answer","text":"No information is saved; everything runs locally in your browser."}},{"@type":"Question","name":"Is it free?","acceptedAnswer":{"@type":"Answer","text":"The Color Picker is completely free to use."}}]}</script>
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🎨</span> Color Picker</h1></div></header>
-<main data-aos="fade-in" class="container animate__animated animate__fadeIn">
+<main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p><strong>Color Picker</strong> lets designers quickly choose any hue and instantly see its HEX, RGB and HSL codes. Use the slider or enter a value to refine your shade, then copy the color codes to your clipboard with one click. The entire tool works offline after the first visit so you can rely on it anywhere. Simple and fast, it&rsquo;s perfect for web projects, graphic design or presentations. Try the Color Picker now!</p>
 <div>
 <input type="color" id="picker" value="#3f51b5" aria-label="Pick a color">
