--- a/tools/countdown-timer/index.html
+++ b/tools/countdown-timer/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
+<link rel="stylesheet" href="../../tools.css">
 <script defer src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script defer src="../../app.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous"></script>
@@ -26,8 +27,9 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I start the timer?","acceptedAnswer":{"@type":"Answer","text":"Enter minutes and seconds and click start."}},{"@type":"Question","name":"Can I pause it?","acceptedAnswer":{"@type":"Answer","text":"Yes, you can pause and resume as needed."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Once loaded the timer works without internet."}},{"@type":"Question","name":"Will it alert me?","acceptedAnswer":{"@type":"Answer","text":"A simple beep sounds when time runs out."}},{"@type":"Question","name":"Is it free?","acceptedAnswer":{"@type":"Answer","text":"Yes, use the timer without any cost."}}]}</script>
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">⏳</span> Countdown Timer</h1></div></header>
-<main data-aos="fade-in" class="container animate__animated animate__fadeIn">
+<main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Countdown Timer helps you track short intervals with ease. This <strong>online timer</strong> runs entirely on your device so you can stay focused even if you lose connection. Set the minutes and seconds, press start and watch the display count down in real time. You can pause and resume whenever you need a break. When the time hits zero, the timer will alert you with a beep, keeping you on schedule for workouts, study sessions, or cooking. Try the Countdown Timer now!</p>
 <label>Minutes: <input type="number" id="cdMin" aria-label="Minutes" value="1"></label>
 <label>Seconds: <input type="number" id="cdSec" aria-label="Seconds" value="0"></label>
