--- a/tools/currency-converter/index.html
+++ b/tools/currency-converter/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
+<link rel="stylesheet" href="../../tools.css">
 <script defer src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script defer src="../../app.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous"></script>
@@ -26,8 +27,9 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I convert currencies?","acceptedAnswer":{"@type":"Answer","text":"Enter an amount, choose currencies and press convert."}},{"@type":"Question","name":"Are rates live?","acceptedAnswer":{"@type":"Answer","text":"This demo uses static rates so it also works offline."}},{"@type":"Question","name":"Can I add more currencies?","acceptedAnswer":{"@type":"Answer","text":"Currently USD, EUR and GBP are included for simplicity."}},{"@type":"Question","name":"Is it free to use?","acceptedAnswer":{"@type":"Answer","text":"Yes, there are no costs or tracking involved."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Yes, conversion happens locally after the first load."}}]}</script>
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">💱</span> Currency Converter</h1></div></header>
-<main data-aos="fade-in" class="container animate__animated animate__fadeIn">
+<main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Currency Converter instantly shows exchange values for U.S. dollars, euros and British pounds. This <strong>offline currency tool</strong> uses sample rates stored in the page so you can see approximate conversions without internet access. Just select the source and target currencies, type an amount and tap convert. The results appear below for quick reference. For live data you would normally connect to an API, but this version demonstrates the process completely client-side. Try the Currency Converter now!</p>
 <div>
 <label>Amount <input type="number" id="ccAmount" aria-label="Amount"></label>
