--- a/tools/date-difference-calculator/index.html
+++ b/tools/date-difference-calculator/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
+<link rel="stylesheet" href="../../tools.css">
 <script defer src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script defer src="../../app.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous"></script>
@@ -26,8 +27,9 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I find days between two dates?","acceptedAnswer":{"@type":"Answer","text":"Select a start and end date to instantly see the number of days in between."}},{"@type":"Question","name":"Can I use past and future dates?","acceptedAnswer":{"@type":"Answer","text":"Yes, you can calculate differences for any pair of dates."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Once loaded, the calculator runs completely in your browser."}},{"@type":"Question","name":"Is my date information stored?","acceptedAnswer":{"@type":"Answer","text":"No information leaves your device; everything is calculated locally."}},{"@type":"Question","name":"Is the tool free?","acceptedAnswer":{"@type":"Answer","text":"Yes, this tool is free for unlimited use."}}]}</script>
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">📆</span> Date Difference Calculator</h1></div></header>
-<main data-aos="fade-in" class="container animate__animated animate__fadeIn">
+<main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Date Difference Calculator lets you discover the exact number of days separating any two dates. This <strong>online days counter</strong> works entirely in your browser, so it keeps running even if you lose your connection. Just pick a start date and an end date to instantly see how many days are in between. Whether you are planning an event, tracking a project timeline, or simply curious, this tool simplifies the math. All calculations happen locally, ensuring your date information remains private. Try the Date Difference Calculator now!</p>
 <div>
 <label>Start Date <input type="date" id="start" aria-label="Start date"></label>
