--- a/tools/dice-roller/index.html
+++ b/tools/dice-roller/index.html
@@ -20,6 +20,7 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
+<link rel="stylesheet" href="../../tools.css">
 <script defer src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script defer src="../../app.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous"></script>
@@ -27,8 +28,9 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I roll the dice?","acceptedAnswer":{"@type":"Answer","text":"Click the roll button and the dice image will show a random value."}},{"@type":"Question","name":"Can I roll multiple dice?","acceptedAnswer":{"@type":"Answer","text":"Press roll again to simulate tossing several dice and sum the results."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Yes, once loaded the Dice Roller functions without internet."}},{"@type":"Question","name":"Is my result stored?","acceptedAnswer":{"@type":"Answer","text":"No data is stored; each roll happens purely in your browser."}},{"@type":"Question","name":"Is it free?","acceptedAnswer":{"@type":"Answer","text":"This Dice Roller is completely free to use."}}]}</script>
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🎲</span> Dice Roller</h1></div></header>
-<main data-aos="fade-in" class="container text-center animate__animated animate__fadeIn">
+<main id="main" data-aos="fade-in" class="container text-center animate__animated animate__fadeIn">
 <p><strong>Dice Roller</strong> gives you quick dice throws for board games or random decisions. Tap the roll button to spin the die with a smooth animation. The current value appears in large type below so it&rsquo;s easy to read at a glance. Because everything runs offline you can use it anywhere. Whether you&rsquo;re planning a game night or need a fast way to pick a number, this small utility is ready. Try the Dice Roller now!</p>
 <div class="my-4">
 <div id="die" style="font-size:4rem;">⚀</div>
