--- a/tools/fraction-calculator/index.html
+++ b/tools/fraction-calculator/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
+<link rel="stylesheet" href="../../tools.css">
 <script defer src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script defer src="../../app.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous"></script>
@@ -26,8 +27,9 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I add fractions?","acceptedAnswer":{"@type":"Answer","text":"Enter the numerators and denominators, choose addition, and the result shows the simplified sum."}},{"@type":"Question","name":"Can I multiply fractions?","acceptedAnswer":{"@type":"Answer","text":"Yes, select multiply and the calculator will display the product in simplest form."}},{"@type":"Question","name":"Does it reduce fractions?","acceptedAnswer":{"@type":"Answer","text":"Results are automatically simplified to the lowest terms."}},{"@type":"Question","name":"Will it work offline?","acceptedAnswer":{"@type":"Answer","text":"After the first visit the tool functions without internet."}},{"@type":"Question","name":"Is my input stored anywhere?","acceptedAnswer":{"@type":"Answer","text":"No data leaves your browser so your work stays private."}}]}</script>
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">¼</span> Fraction Calculator</h1></div></header>
-<main data-aos="fade-in" class="container animate__animated animate__fadeIn">
+<main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Fraction Calculator makes working with fractions straightforward. This <strong>online fraction calculator</strong> handles common tasks like adding, subtracting, multiplying, and dividing with ease. Simply enter two fractions, choose the operation, and see the result displayed in simplest form. Whether you need a quick <em>fraction solver</em> for homework problems or to adjust a recipe, this tool calculates everything in your browser. Since it runs entirely client-side, it continues to work offline once loaded. The clean design focuses on usability so you can concentrate on the math. Get accurate answers every time and master tricky fraction exercises. Try the Fraction Calculator now!</p>
 <form id="fracForm" aria-label="Fraction calculator form">
 <label for="num1">Fraction 1 Numerator</label>
