--- a/tools/graphing-calculator/index.html
+++ b/tools/graphing-calculator/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
+<link rel="stylesheet" href="../../tools.css">
 <script defer src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script defer src="../../app.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous"></script>
@@ -27,8 +28,9 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I graph a function?","acceptedAnswer":{"@type":"Answer","text":"Type an equation like x^2 in the input box and click Plot."}},{"@type":"Question","name":"Is the Graphing Calculator free?","acceptedAnswer":{"@type":"Answer","text":"Yes, you can use this tool without any cost or signup."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Once loaded, all scripts are cached so it works offline."}},{"@type":"Question","name":"Can I plot multiple functions?","acceptedAnswer":{"@type":"Answer","text":"Yes, separate functions with commas to see several graphs."}},{"@type":"Question","name":"Is it mobile friendly?","acceptedAnswer":{"@type":"Answer","text":"The responsive layout lets you plot equations on any device."}}]}</script>
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">📈</span> Graphing Calculator</h1></div></header>
-<main data-aos="fade-in" class="container animate__animated animate__fadeIn">
+<main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Graphing Calculator lets you plot lines and curves with ease. Enter an equation and see an interactive chart update instantly. This <strong>online graphing calculator</strong> uses the lightweight function-plot library so graphs render smoothly on mobile and desktop. You can zoom and pan to inspect intersections and roots, making it ideal for homework checks or quick visualizations. Because everything runs in your browser, there&rsquo;s no need for heavy software installations. The interface focuses on clarity: simply type in an equation like <code>x^2</code> or <code>sin(x)</code>, hit plot, and watch the curve appear. You can plot multiple expressions at once by separating them with commas. After the first visit, the scripts are cached, which means you can keep exploring functions even when you&rsquo;re offline. For more specialized calculations, check out our <a href="../scientific-calculator/">Scientific Calculator</a>, <a href="../basic-calculator/">Basic Calculator</a>, and <a href="../random-number-generator/">Random Number Generator</a>. Try the Graphing Calculator now!</p>
 <label for="gc-input">Equation</label>
 <input id="gc-input" value="x^2" aria-label="Equation">
