--- a/tools/loan-calculator/index.html
+++ b/tools/loan-calculator/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
+<link rel="stylesheet" href="../../tools.css">
 <script defer src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script defer src="../../app.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous"></script>
@@ -26,8 +27,9 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I calculate my loan payment?","acceptedAnswer":{"@type":"Answer","text":"Enter amount, interest rate and years, then press calculate."}},{"@type":"Question","name":"Can I use this for mortgages?","acceptedAnswer":{"@type":"Answer","text":"Yes, you can estimate mortgage payments the same way."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Once loaded it works without internet."}},{"@type":"Question","name":"Is my data saved?","acceptedAnswer":{"@type":"Answer","text":"No inputs are stored or sent anywhere."}},{"@type":"Question","name":"Is the tool free?","acceptedAnswer":{"@type":"Answer","text":"Yes, the Loan Calculator is completely free."}}]}</script>
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🏦</span> Loan Calculator</h1></div></header>
-<main data-aos="fade-in" class="container animate__animated animate__fadeIn">
+<main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Loan Calculator lets you see what your monthly payment would be for a mortgage or personal loan. This <strong>online loan calculator</strong> only needs the loan amount, annual interest rate, and number of years. With one click it reveals your monthly cost so you can budget confidently. Because everything runs in your browser, you can revisit the page anytime, even without a connection. Use it to plan for a car loan, student loan, or any installment plan. Understanding payments helps you compare offers and avoid surprises. Try the Loan Calculator now!</p>
 <label>Amount: <input type="number" id="loanAmount" aria-label="Amount"></label>
 <label>Rate (% annual): <input type="number" id="loanRate" aria-label="Rate"></label>
