--- a/tools/markdown-editor/index.html
+++ b/tools/markdown-editor/index.html
@@ -20,6 +20,7 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
+<link rel="stylesheet" href="../../tools.css">
 <script defer src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script defer src="../../app.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous"></script>
@@ -28,8 +29,9 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I use the Markdown Editor?","acceptedAnswer":{"@type":"Answer","text":"Type Markdown on the left and the formatted HTML preview updates as you write."}},{"@type":"Question","name":"Does it save my text?","acceptedAnswer":{"@type":"Answer","text":"No, your notes stay local and disappear when you close the tab."}},{"@type":"Question","name":"Can I copy the HTML?","acceptedAnswer":{"@type":"Answer","text":"Yes, click the copy button under the preview to copy the rendered markup."}},{"@type":"Question","name":"Is it free?","acceptedAnswer":{"@type":"Answer","text":"This editor is free for personal and professional projects."}},{"@type":"Question","name":"Will it work offline?","acceptedAnswer":{"@type":"Answer","text":"After your first visit it loads from cache and works offline."}}]}</script>
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">📝</span> Markdown Editor</h1></div></header>
-<main data-aos="fade-in" class="container animate__animated animate__fadeIn">
+<main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p><strong>Markdown Editor</strong> lets you write Markdown and instantly preview the HTML output. It&rsquo;s ideal for note taking, blogging or preparing documentation. The editor runs completely in your browser so your words never leave your device and the tool stays available offline. Type on the left, read the formatted result on the right and copy the final markup when you&rsquo;re done. Try the Markdown Editor now!</p>
 <div class="row">
 <div class="col-md-6 mb-3">
