--- a/tools/paint-coverage-calculator/index.html
+++ b/tools/paint-coverage-calculator/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
+<link rel="stylesheet" href="../../tools.css">
 <script defer src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script defer src="../../app.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous"></script>
@@ -26,8 +27,9 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I use the Paint Coverage Calculator?","acceptedAnswer":{"@type":"Answer","text":"Enter the wall area and coverage per gallon to find out how many gallons are needed."}},{"@type":"Question","name":"Does it account for multiple coats?","acceptedAnswer":{"@type":"Answer","text":"Yes, specify the number of coats and the total is adjusted."}},{"@type":"Question","name":"Is it free?","acceptedAnswer":{"@type":"Answer","text":"Absolutely, the tool is free and works offline."}},{"@type":"Question","name":"Are my values saved?","acceptedAnswer":{"@type":"Answer","text":"No data is stored or sent anywhere."}},{"@type":"Question","name":"Can I change units?","acceptedAnswer":{"@type":"Answer","text":"The calculator uses square feet but you can convert units with the Unit Converter."}}]}</script>
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🎨</span> Paint Coverage Calculator</h1></div></header>
-<main data-aos="fade-in" class="container animate__animated animate__fadeIn">
+<main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>The <strong>Paint Coverage Calculator</strong> estimates how many gallons of paint you need for walls and ceilings. This <em>online paint estimator</em> works great for DIY projects and professional jobs alike. Simply enter the total area to cover in square feet, the paint&rsquo;s coverage rate per gallon, and the number of coats. The result instantly shows how many gallons to buy so you avoid extra trips. Once loaded, the tool operates offline, making it handy on-site where Wi‑Fi might be spotty. Keep your renovation on budget and reduce waste. Try the Paint Coverage Calculator now!</p>
 <div>
 <label>Area (sq ft) <input type="number" id="area"></label>
