--- a/tools/percentage-calculator/index.html
+++ b/tools/percentage-calculator/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
+<link rel="stylesheet" href="../../tools.css">
 <script defer src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script defer src="../../app.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous"></script>
@@ -26,8 +27,9 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I calculate a percentage?","acceptedAnswer":{"@type":"Answer","text":"Enter the base amount and the percentage to instantly see the calculated value."}},{"@type":"Question","name":"Can it find percentage increase?","acceptedAnswer":{"@type":"Answer","text":"Yes, input the original and new values to compute percentage change."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"After the first visit all resources are cached so the calculator works without internet."}},{"@type":"Question","name":"Is my data stored anywhere?","acceptedAnswer":{"@type":"Answer","text":"No, all calculations run in your browser and nothing is saved."}},{"@type":"Question","name":"Is it free to use?","acceptedAnswer":{"@type":"Answer","text":"Yes, the Percentage Calculator is completely free with no registration."}}]}</script>
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">📊</span> Percentage Calculator</h1></div></header>
-<main data-aos="fade-in" class="container animate__animated animate__fadeIn">
+<main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Percentage Calculator makes everyday <strong>percent calculations</strong> simple. Whether you need the <em>percentage of a number</em> or want to see the <em>percent change</em> between two amounts, this lightweight tool provides quick answers. Type in any value and the percent you want to find and get the result instantly. Because the script runs entirely in your browser, the tool works offline after the initial load. Use it to compute <strong>percentage increase</strong> or decrease without downloading apps. The interface is streamlined so you can focus on your task and get accurate numbers without distractions. With the Percentage Calculator, tricky math becomes effortless. Try the Percentage Calculator now!</p>
 <div>
 <label>Amount <input type="number" id="base" aria-label="Amount"></label>
