--- a/tools/pomodoro-timer/index.html
+++ b/tools/pomodoro-timer/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
+<link rel="stylesheet" href="../../tools.css">
 <script defer src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script defer src="../../app.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous"></script>
@@ -26,8 +27,9 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I start a Pomodoro?","acceptedAnswer":{"@type":"Answer","text":"Press start to begin a 25-minute session. After it ends, take a short break."}},{"@type":"Question","name":"Can I change the timer length?","acceptedAnswer":{"@type":"Answer","text":"Yes, adjust the work and break durations before starting."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Once loaded, the timer runs without internet."}},{"@type":"Question","name":"Will it alert me when time is up?","acceptedAnswer":{"@type":"Answer","text":"Yes, it plays a beep and shows a message when the session ends."}},{"@type":"Question","name":"Is my data saved?","acceptedAnswer":{"@type":"Answer","text":"No personal data is stored; settings remain in the browser only."}}]}</script>
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🍅</span> Pomodoro Timer</h1></div></header>
-<main data-aos="fade-in" class="container animate__animated animate__fadeIn">
+<main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Pomodoro Timer helps you maintain focus by breaking work into 25-minute bursts followed by short breaks. This <strong>online pomodoro timer</strong> is simple to use and runs entirely in your browser so you can keep your workflow distraction-free. Adjust the work and break lengths to suit your schedule, start the timer and let it count down. When time is up, you'll hear a beep and see a notice to take a break or begin the next round. After the first load, the app works offline, making it ideal for plane rides or spots with poor connectivity. By cycling between deep focus and rest, you'll stay productive without burning out. Try the Pomodoro Timer now!</p>
 <div>
 <label>Work Minutes <input type="number" id="work" value="25"></label>
