--- a/tools/random-number-generator/index.html
+++ b/tools/random-number-generator/index.html
@@ -19,14 +19,16 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
+<link rel="stylesheet" href="../../tools.css">
 <script defer src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script defer src="../../app.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous"></script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Random Number Generator","operatingSystem":"Any","applicationCategory":"Utility","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🎲</span> Random Number Generator</h1></div></header>
-<main data-aos="fade-in" class="container animate__animated animate__fadeIn">
+<main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>The <strong>Random Number Generator</strong> creates numbers for games or decision-making. Enter a minimum and maximum value, then click generate. This <em>online RNG</em> works offline after first load. Try the Random Number Generator now!</p>
 <label>Min <input type="number" id="rng-min" value="1"></label>
 <label>Max <input type="number" id="rng-max" value="100"></label>
