--- a/tools/simple-interest-calculator/index.html
+++ b/tools/simple-interest-calculator/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
+<link rel="stylesheet" href="../../tools.css">
 <script defer src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script defer src="../../app.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous"></script>
@@ -26,8 +27,9 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I calculate simple interest?","acceptedAnswer":{"@type":"Answer","text":"Enter principal, annual rate and time in years then press calculate."}},{"@type":"Question","name":"Can it handle monthly interest?","acceptedAnswer":{"@type":"Answer","text":"Enter the number of years including fractions for months, e.g. 1.5 for 18 months."}},{"@type":"Question","name":"Is this calculator free?","acceptedAnswer":{"@type":"Answer","text":"Yes, the tool is completely free and works offline after first load."}},{"@type":"Question","name":"Does it store my numbers?","acceptedAnswer":{"@type":"Answer","text":"No personal data is saved; all calculations run in your browser."}},{"@type":"Question","name":"Can I use it on my phone?","acceptedAnswer":{"@type":"Answer","text":"The responsive design works well on mobile devices."}}]}</script>
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">💰</span> Simple Interest Calculator</h1></div></header>
-<main data-aos="fade-in" class="container animate__animated animate__fadeIn">
+<main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Simple Interest Calculator helps you estimate interest charges on loans or deposits using the <em>simple interest</em> method. This <strong>online calculator</strong> asks for the principal amount, annual rate and time period in years. After you click calculate, it displays the interest earned or owed along with the final total. Because everything happens client-side, the tool remains functional offline after the first visit. Whether you're checking a small loan or planning savings growth, this calculator provides a quick answer with minimal fuss. Keep your finances on track and know what to expect before signing an agreement. Try the Simple Interest Calculator now!</p>
 <label>Principal: <input type="number" id="siPrincipal" aria-label="Principal"></label>
 <label>Rate (% per year): <input type="number" id="siRate" aria-label="Rate"></label>
