--- a/tools/stopwatch/index.html
+++ b/tools/stopwatch/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
+<link rel="stylesheet" href="../../tools.css">
 <script defer src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script defer src="../../app.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous"></script>
@@ -26,8 +27,9 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I start the stopwatch?","acceptedAnswer":{"@type":"Answer","text":"Click start to begin timing, stop to pause and reset to zero."}},{"@type":"Question","name":"Can I use keyboard shortcuts?","acceptedAnswer":{"@type":"Answer","text":"Yes, press space to start or stop and r to reset."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Yes, after the first load the stopwatch works without internet."}},{"@type":"Question","name":"Is data stored anywhere?","acceptedAnswer":{"@type":"Answer","text":"No information is sent or saved."}},{"@type":"Question","name":"Is it free?","acceptedAnswer":{"@type":"Answer","text":"Yes, the stopwatch is completely free to use."}}]}</script>
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">⏱️</span> Stopwatch</h1></div></header>
-<main data-aos="fade-in" class="container animate__animated animate__fadeIn">
+<main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Stopwatch lets you track elapsed time with precision. This <strong>online stopwatch</strong> starts and stops with a tap or spacebar press, then resets to zero on command. Because all timing occurs in your browser, it works even without a network connection after loading. Use it for workouts, study sessions or any activity that requires accurate tracking. The clear display and simple controls keep distractions minimal. Try the Stopwatch now!</p>
 <div>
 <p id="swDisplay">0.0s</p>
