--- a/tools/temperature-converter/index.html
+++ b/tools/temperature-converter/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
+<link rel="stylesheet" href="../../tools.css">
 <script defer src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script defer src="../../app.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous"></script>
@@ -26,8 +27,9 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I convert Celsius to Fahrenheit?","acceptedAnswer":{"@type":"Answer","text":"Type a Celsius value and the Fahrenheit result appears instantly."}},{"@type":"Question","name":"Can it convert Fahrenheit to Celsius?","acceptedAnswer":{"@type":"Answer","text":"Yes, enter a Fahrenheit temperature to see the Celsius equivalent."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"After the first visit the tool is cached and works without internet."}},{"@type":"Question","name":"Is there any cost?","acceptedAnswer":{"@type":"Answer","text":"No, the Temperature Converter is completely free to use."}},{"@type":"Question","name":"Is my data stored?","acceptedAnswer":{"@type":"Answer","text":"No data is stored; everything happens in your browser."}}]}</script>
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🌡️</span> Temperature Converter</h1></div></header>
-<main data-aos="fade-in" class="container animate__animated animate__fadeIn">
+<main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Temperature Converter makes switching between <strong>Celsius and Fahrenheit</strong> effortless. This streamlined tool provides quick answers whether you're adjusting a recipe, checking the forecast, or learning in science class. Simply input a number and the converted value appears immediately. The interface is intentionally simple so you can focus on the result. Because it runs fully in your browser, the Temperature Converter works offline after the initial load. With no distractions or ads, you get accurate conversions whenever you need them. Try the Temperature Converter now!</p>
 <div>
 <label>Celsius <input type="number" id="celsius" aria-label="Celsius"></label>
