--- a/tools/time-zone-converter/index.html
+++ b/tools/time-zone-converter/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
+<link rel="stylesheet" href="../../tools.css">
 <script defer src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script defer src="../../app.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous"></script>
@@ -26,8 +27,9 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I convert times?","acceptedAnswer":{"@type":"Answer","text":"Select the source zone, the target zone and a time to see the converted value."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Yes, after the first visit you can use it without internet."}},{"@type":"Question","name":"Can I search for cities?","acceptedAnswer":{"@type":"Answer","text":"Use the built-in list to pick common cities quickly."}},{"@type":"Question","name":"Is daylight saving handled?","acceptedAnswer":{"@type":"Answer","text":"Yes, the browser's time zone data automatically includes daylight changes."}},{"@type":"Question","name":"Is it free to use?","acceptedAnswer":{"@type":"Answer","text":"The tool is free and stores no personal data."}}]}</script>
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🕑</span> Time Zone Converter</h1></div></header>
-<main data-aos="fade-in" class="container animate__animated animate__fadeIn">
+<main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Time Zone Converter lets you compare local time with any other region in seconds. This <strong>online time zone converter</strong> uses your browser's capabilities to adjust for daylight saving and display accurate times around the world. Pick your current zone, choose another city or region, and enter a date and time to see the conversion instantly. Because it works entirely on your device, you can access it even when offline. This makes scheduling meetings or travel calls easier no matter where you are. Try the Time Zone Converter now!</p>
 <label>From: <select id="tzFrom" aria-label="From time zone"></select></label>
 <label>To: <select id="tzTo" aria-label="To time zone"></select></label>
