--- a/tools/tip-calculator/index.html
+++ b/tools/tip-calculator/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
+<link rel="stylesheet" href="../../tools.css">
 <script defer src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script defer src="../../app.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous"></script>
@@ -26,8 +27,9 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How does the Tip Calculator work?","acceptedAnswer":{"@type":"Answer","text":"Enter your bill amount, choose a tip percentage and the number of people splitting the bill. The calculator instantly shows each person's share."}},{"@type":"Question","name":"Is it suitable for group dining?","acceptedAnswer":{"@type":"Answer","text":"Yes. It divides the total including gratuity among diners so everyone pays their fair share."}},{"@type":"Question","name":"Can it handle custom tip rates?","acceptedAnswer":{"@type":"Answer","text":"Absolutely. You can enter any percentage to match local service customs or your own preference."}},{"@type":"Question","name":"Does it store my data?","acceptedAnswer":{"@type":"Answer","text":"No information is saved. Everything is calculated in your browser for privacy."}},{"@type":"Question","name":"Will it work offline?","acceptedAnswer":{"@type":"Answer","text":"After the initial load the page works without an internet connection."}}]}</script>
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">💵</span> Tip Calculator</h1></div></header>
-<main data-aos="fade-in" class="container animate__animated animate__fadeIn">
+<main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Tip Calculator makes <strong>restaurant tip</strong> math painless so you can focus on enjoying your meal. Whether you're dining out with friends or grabbing a quick bite, figuring out <em>service gratuity</em> and splitting the bill shouldn't slow you down. Enter your bill total, adjust the percentage slider, and see exactly how much each person owes. This handy tool is perfect for <strong>bill splitting</strong>, letting everyone cover their share without arguments. Because calculations happen on your device, it works even when you're offline. The minimalist interface loads fast and keeps distractions to a minimum. With the <strong>Tip Calculator</strong> you never have to wonder if you're overpaying or shortchanging your server. The script is lightweight yet accurate, so you get results instantly while keeping your data private. Try the Tip Calculator now!</p>
 <form id="tipForm" aria-label="Tip calculator form">
 <label>Bill Amount $<input type="number" id="amount" min="0" step="0.01"></label>
