--- a/tools/unit-converter/index.html
+++ b/tools/unit-converter/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
+<link rel="stylesheet" href="../../tools.css">
 <script defer src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script defer src="../../app.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous"></script>
@@ -26,8 +27,9 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I change units?","acceptedAnswer":{"@type":"Answer","text":"Choose the unit types from the dropdowns, enter a value, and the result updates automatically."}},{"@type":"Question","name":"Is there a cost?","acceptedAnswer":{"@type":"Answer","text":"No, the Unit Converter is completely free to use."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"After first load, all files are cached so it works offline."}},{"@type":"Question","name":"What units are supported?","acceptedAnswer":{"@type":"Answer","text":"It currently handles common length and weight units like meters, feet, kilograms, and pounds."}},{"@type":"Question","name":"Can I use it on mobile?","acceptedAnswer":{"@type":"Answer","text":"Yes, the layout is responsive for phones and tablets."}}]}</script>
 </head>
 <body>
+  <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🔄</span> Unit Converter</h1></div></header>
-<main data-aos="fade-in" class="container animate__animated animate__fadeIn">
+<main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>The <strong>Unit Converter</strong> provides a simple way to switch between different measurement systems. Whether you need to turn meters into feet or kilograms into pounds, this tool makes it straightforward. Select the type of conversion, enter your value, and see the result appear instantly. The interface is uncluttered so you can focus on the numbers that matter. This <em>online unit converter</em> works without signups and caches its scripts on your first visit, letting you continue even when you&rsquo;re offline. For more specialized calculators, check out our <a href="../basic-calculator/">Basic Calculator</a>, <a href="../scientific-calculator/">Scientific Calculator</a>, and <a href="../graphing-calculator/">Graphing Calculator</a>. Try the Unit Converter now!</p>
 <label for="uc-type">Type</label>
 <select id="uc-type"><option value="len">Length</option><option value="wt">Weight</option></select>
