--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <meta property="og:description" content="Explore calculators, converters and utilities in a single hub.">
 <meta property="og:url" content="https://example.com/index.html">
 <link rel="canonical" href="https://example.com/index.html">
+<meta name="theme-color" content="#007bff">
 <meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/1F527.png">
 <link rel="manifest" href="manifest.webmanifest">
 <link rel="preconnect" href="https://fonts.googleapis.com">
