--- a/tools/color-converter/index.html
+++ b/tools/color-converter/index.html
@@ -11,6 +11,7 @@
 <meta property="og:description" content="Convert hex colors to RGB or HSL"/>
 <meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/1F3A8.png"/>
 <link rel="canonical" href="https://example.com/tools/color-converter/" />
+<meta name="theme-color" content="#007bff">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet">
