Remove bundled OpenMoji PNGs and add download script

--- a/tools/age-calculator/index.html
+++ b/tools/age-calculator/index.html
@@ -9,7 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/age-calculator/">
 <meta property="og:title" content="Age Calculator"/>
 <meta property="og:description" content="Find your exact age in years"/>
-<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/1F382.png"/>
+<meta property="og:image" content="../../assets/age-calculator-cake.png"/>
 <link rel="canonical" href="https://example.com/tools/age-calculator/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
