--- a/tools/base64-encoder/index.html
+++ b/tools/base64-encoder/index.html
@@ -9,7 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/base64-encoder/">
 <meta property="og:title" content="Base64 Encoder/Decoder"/>
 <meta property="og:description" content="Convert text to and from base64 instantly. Works offline with no data sent to servers."/>
-<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/1F524.png"/>
+<meta property="og:image" content="../../assets/base64-encoder-keyboard.png"/>
 <link rel="canonical" href="https://example.com/tools/base64-encoder/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
