--- a/tools/bmi-calculator/index.html
+++ b/tools/bmi-calculator/index.html
@@ -9,7 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/bmi-calculator/">
 <meta property="og:title" content="BMI Calculator"/>
 <meta property="og:description" content="Check your body mass index"/>
-<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/2696-FE0F.png"/>
+<meta property="og:image" content="../../assets/bmi-calculator-scale.png"/>
 <link rel="canonical" href="https://example.com/tools/bmi-calculator/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
