--- a/tools/car-loan-calculator/index.html
+++ b/tools/car-loan-calculator/index.html
@@ -9,7 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/car-loan-calculator/">
 <meta property="og:title" content="Car Loan Calculator"/>
 <meta property="og:description" content="Estimate monthly mortgage or loan costs"/>
-<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/1F3E6.png"/>
+<meta property="og:image" content="../../assets/loan-bank.png"/>
 <link rel="canonical" href="https://example.com/tools/car-loan-calculator/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
