--- a/tools/color-picker/index.html
+++ b/tools/color-picker/index.html
@@ -9,7 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/color-picker/">
 <meta property="og:title" content="Color Picker"/>
 <meta property="og:description" content="Pick colors and copy codes instantly"/>
-<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/1F3A8.png"/>
+<meta property="og:image" content="../../assets/palette.png"/>
 <link rel="canonical" href="https://example.com/tools/color-picker/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
