--- a/tools/dice-roller/index.html
+++ b/tools/dice-roller/index.html
@@ -9,7 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/dice-roller/">
 <meta property="og:title" content="Dice Roller"/>
 <meta property="og:description" content="Roll dice with animation and copy results"/>
-<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/1F3B2.png"/>
+<meta property="og:image" content="../../assets/dice-die.png"/>
 <link rel="canonical" href="https://example.com/tools/dice-roller/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
