--- a/tools/discount-calculator/index.html
+++ b/tools/discount-calculator/index.html
@@ -9,7 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/discount-calculator/">
 <meta property="og:title" content="Discount Calculator"/>
 <meta property="og:description" content="Calculate sale prices and savings"/>
-<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/1F3F7-FE0F.png"/>
+<meta property="og:image" content="../../assets/discount-label.png"/>
 <link rel="canonical" href="https://example.com/tools/discount-calculator/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
