--- a/tools/graphing-calculator/index.html
+++ b/tools/graphing-calculator/index.html
@@ -9,7 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/graphing-calculator/">
 <meta property="og:title" content="Graphing Calculator"/>
 <meta property="og:description" content="Visualize equations in your browser"/>
-<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/1F4C8.png"/>
+<meta property="og:image" content="../../assets/graphing-calculator-chart.png"/>
 <link rel="canonical" href="https://example.com/tools/graphing-calculator/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
