--- a/tools/json-formatter/index.html
+++ b/tools/json-formatter/index.html
@@ -9,7 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/json-formatter/">
 <meta property="og:title" content="JSON Formatter"/>
 <meta property="og:description" content="Format and validate JSON instantly"/>
-<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/7B-7D.png"/>
+<meta property="og:image" content="../../assets/json-formatter-braces.png"/>
 <link rel="canonical" href="https://example.com/tools/json-formatter/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
