--- a/tools/paint-coverage-calculator/index.html
+++ b/tools/paint-coverage-calculator/index.html
@@ -9,7 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/paint-coverage-calculator/">
 <meta property="og:title" content="Paint Coverage Calculator"/>
 <meta property="og:description" content="Estimate paint requirements for your space"/>
-<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/1F3A8.png"/>
+<meta property="og:image" content="../../assets/palette.png"/>
 <link rel="canonical" href="https://example.com/tools/paint-coverage-calculator/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
