--- a/tools/percentage-calculator/index.html
+++ b/tools/percentage-calculator/index.html
@@ -9,7 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/percentage-calculator/">
 <meta property="og:title" content="Percentage Calculator"/>
 <meta property="og:description" content="Find percent of any number"/>
-<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/1F4CA.png"/>
+<meta property="og:image" content="../../assets/percentage-calculator-bars.png"/>
 <link rel="canonical" href="https://example.com/tools/percentage-calculator/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
