--- a/tools/stopwatch/index.html
+++ b/tools/stopwatch/index.html
@@ -9,7 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/stopwatch/">
 <meta property="og:title" content="Stopwatch"/>
 <meta property="og:description" content="Simple online stopwatch"/>
-<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/23F1-FE0F.png"/>
+<meta property="og:image" content="../../assets/stopwatch.png"/>
 <link rel="canonical" href="https://example.com/tools/stopwatch/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
