--- a/tools/date-difference-calculator/index.html
+++ b/tools/date-difference-calculator/index.html
@@ -9,7 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/date-difference-calculator/">
 <meta property="og:title" content="Date Difference Calculator"/>
 <meta property="og:description" content="Measure the days between any two dates"/>
-<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/1F4C6.png"/>
+<meta property="og:image" content="../../assets/date-diff-calendar.png"/>
 <link rel="canonical" href="https://example.com/tools/date-difference-calculator/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
