--- a/tools/triangle-area-calculator/index.html
+++ b/tools/triangle-area-calculator/index.html
@@ -9,7 +9,7 @@
 <meta property="og:url" content="https://example.com/tools/triangle-area-calculator/">
 <meta property="og:title" content="Triangle Area Calculator"/>
 <meta property="og:description" content="Compute triangle area from base and height"/>
-<meta property="og:image" content="https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/png/256x256/1F53A.png"/>
+<meta property="og:image" content="../../assets/triangle-area-calculator-triangle.png"/>
 <link rel="canonical" href="https://example.com/tools/triangle-area-calculator/" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
