Tick task for CDN mirroring

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Fira+Code&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-TNPe8tkCbZ2M1zDh/QEqplLWYwgdEN0OZK0s8AjtKoa6HgMHtYjgJv1bLvK+cvM/" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
+<link rel="stylesheet" href="/vendor/cdn/fontawesome.min.css">
+<link rel="stylesheet" href="/vendor/cdn/bootstrap.min.css">
+<link rel="stylesheet" href="/vendor/cdn/animate.min.css">
+<link rel="stylesheet" href="/vendor/cdn/aos.css">
 <link rel="stylesheet" href="style.min.css">
 <link rel="stylesheet" href="dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
 <link rel="stylesheet" href="tools.css">
-<script src="https://cdn.tailwindcss.com?plugins=daisyui"></script>
+<script src="/vendor/cdn/tailwind.js"></script>
 <script>
 tailwind.config = {
   darkMode: 'class',
@@ -224,13 +224,13 @@ tailwind.config = {
 <footer class="text-center text-sm opacity-80 py-8">
   &copy; 2025 MiniTools Universe
 </footer>
-<script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
-<script src="https://unpkg.com/aos@next/dist/aos.js" defer></script>
-<script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/ui@3.x.x/dist/cdn.min.js"></script>
-<script type="module">import {gsap} from "https://cdn.jsdelivr.net/npm/gsap@3.12.2/dist/gsap.min.js";import {ScrollTrigger} from "https://cdn.jsdelivr.net/npm/gsap@3.12.2/dist/ScrollTrigger.min.js";gsap.registerPlugin(ScrollTrigger);window.gsap=gsap;window.ScrollTrigger=ScrollTrigger;</script>
+<script src="/vendor/cdn/alpine.min.js" defer></script>
+<script src="/vendor/cdn/aos.js" defer></script>
+<script defer src="/vendor/cdn/alpine-ui.min.js"></script>
+<script type="module">import {gsap} from "/vendor/cdn/gsap.min.js";import {ScrollTrigger} from "/vendor/cdn/ScrollTrigger.min.js";gsap.registerPlugin(ScrollTrigger);window.gsap=gsap;window.ScrollTrigger=ScrollTrigger;</script>
 <script type="module" src="db.js"></script>
 <script src="https://plausible.io/js/plausible.js" data-domain="example.com" defer></script>
-<script type="module" src="https://cdn.jsdelivr.net/npm/instant.page@5.1.1/instantpage.mjs"></script>
+<script type="module" src="/vendor/cdn/instantpage.mjs"></script>
 <script src="mini.js" defer></script>
 </body>
 </html>
