--- a/tools/markdown-editor/index.html
+++ b/tools/markdown-editor/index.html
@@ -15,16 +15,16 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-TNPe8tkCbZ2M1zDh/QEqplLWYwgdEN0OZK0s8AjtKoa6HgMHtYjgJv1bLvK+cvM/" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
+<link rel="stylesheet" href="/../../vendor/cdn/bootstrap.min.css">
+<link rel="stylesheet" href="/../../vendor/cdn/animate.min.css"/>
+<link rel="stylesheet" href="/../../vendor/cdn/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
 <link rel="stylesheet" href="../../tools.css">
-<script defer src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script defer src="/../../vendor/cdn/aos.js"></script>
 <script defer src="../../app.min.js"></script>
-<script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous"></script>
-<script defer src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+<script defer src="/../../vendor/cdn/bootstrap.bundle.min.js"></script>
+<script defer src="/../../vendor/cdn/marked.min.js"></script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Markdown Editor","operatingSystem":"Any","applicationCategory":"DeveloperTool","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I use the Markdown Editor?","acceptedAnswer":{"@type":"Answer","text":"Type Markdown on the left and the formatted HTML preview updates as you write."}},{"@type":"Question","name":"Does it save my text?","acceptedAnswer":{"@type":"Answer","text":"No, your notes stay local and disappear when you close the tab."}},{"@type":"Question","name":"Can I copy the HTML?","acceptedAnswer":{"@type":"Answer","text":"Yes, click the copy button under the preview to copy the rendered markup."}},{"@type":"Question","name":"Is it free?","acceptedAnswer":{"@type":"Answer","text":"This editor is free for personal and professional projects."}},{"@type":"Question","name":"Will it work offline?","acceptedAnswer":{"@type":"Answer","text":"After your first visit it loads from cache and works offline."}}]}</script>
 </head>
